--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "build-babel": "babel ./ui -d ./dist"
   },
   "dependencies": {
+    "circular-json": "^0.5.9",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongoose": "^7.6.3",
-    "neo4j-driver": "^5.13.0"
+    "neo4j-driver": "^5.13.0",
+    "ws": "^8.14.2"
   }
 }
